# zope.sendmail

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  DEPENDENCIES.cfg  INSTALL.txt  MANIFEST.in  README.rst  README.txt  SETUP.cfg  appveyor.yml  buildout.cfg  delivery.py  interfaces.py  maildir.py  meta.zcml  metaconfigure.py  metadirectives.py  pyproject.toml  setup.cfg  setup.py  test.py  tox.ini  vocabulary.py  zcml.py
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst  queue.rst  requirements.txt  usage.rst
src/zope/sendmail/: README.rst  README.txt  _compat.py  configure.zcml  delivery.py  event.py  interfaces.py  maildir.py  mailer.py  queue.py  vocabulary.py  zcml.py
src/zope/sendmail/tests/: mail.zcml  test_delivery.py  test_directives.py  test_event.py  test_maildir.py  test_mailer.py  test_queue.py  test_vocabulary.py
tests/: test_delivery.py  test_directives.py  test_maildir.py  test_mailer.py
