# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "zope.sendmail"
version = "7.1"
description = "Zope sendmail"
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Communications :: Email",
    "Framework :: Zope :: 3",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "transaction",
    "zope.i18nmessageid",
    "zope.interface",
    "zope.schema",
    "zope.component>=3.8.0",
    "zope.configuration",
]

[project.scripts]
zope-sendmail = "zope.sendmail.queue:run"

[project.optional-dependencies]
test = [
    "zope.security",
    "zope.testing",
    "zope.testrunner >= 6.4",
]
docs = [
    "Sphinx",
    "repoze.sphinx.autointerface",
    "sphinxcontrib-programoutput",
]
win32 = [
    "pywin32; sys_platform == 'win32'",
]

[project.urls]
Source = "https://github.com/zopefoundation/zope.sendmail"
Documentation = "https://zopesendmail.readthedocs.io/"
Issues = "https://github.com/zopefoundation/zope.sendmail/issues"
Changelog = "https://raw.githubusercontent.com/zopefoundation/zope.sendmail/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["zope.sendmail"]

[tool.coverage.report]
fail_under = 99
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

